# slow-life-game

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: test_01.rs  test_02.rs
src/: main.rs
src/components/: animation.rs  hitbox.rs  mod.rs  monster.rs  monster_movement.rs  monster_respawn_timer.rs  monster_state.rs  monster_type.rs  npc.rs  player.rs  stats.rs  timer_component.rs  ui.rs
src/resources/: game_assets.rs  mod.rs  monster_respawn_timer.rs  physic.rs
src/systems/: animation.rs  combat.rs  combat_system.rs  game_over.rs  hitbox.rs  interaction.rs  loading.rs  mod.rs  monster.rs  monster_movement.rs  monster_state_system.rs  movement.rs  ui.rs
src/systems/combat/: attack.rs  damage.rs  mod.rs
src/utils/: combat_utils.rs  common.rs  math.rs  mod.rs  utils.rs
